# riscv

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.cargo/: config.toml
as/: Cargo.toml
as/src/: main.rs
bww-multiplier-generator/: Cargo.toml
bww-multiplier-generator/src/: main.rs
freestanding/: Cargo.toml  riscv64-arnavion-none-elf.json  riscv64-arnavion-none-elf.ld
freestanding/src/: main.rs
simulator/: Cargo.toml
simulator/src/: csrs.rs  in_order.rs  in_order_ucode.rs  instruction.rs  main.rs  memory.rs  multiplier.rs  out_of_order.rs  tag.rs  ucode.rs  x_regs.rs
src/: instruction.rs  lib.rs  main.rs  pseudo_instruction.rs  register.rs  supported_extensions.rs
tc/: add5.S  add5.c  ai-showdown.S  ai-showdown.c  calibrating-laser-cannons-2.S  calibrating-laser-cannons-2.c  calibrating-laser-cannons-2.data  calibrating-laser-cannons.S  calibrating-laser-cannons.c  circumference.S  circumference.c  conditional-jumps.S  conditional-jumps.asm  conditional-jumps.c  dancing-machine.S  dancing-machine.c  delicious-order.S  delicious-order.c  divide.S  divide.c  masking-time.S  masking-time.c  maze.S  maze.c  maze_save-breaker.S  planet-names.S  planet-names.c  spacial-invasion.S  spacial-invasion.c  tower-of-alloy.S  tower-of-alloy.c  tower-of-alloy.ctz.c  tower-of-alloy.ctz.rs  unseen-fruit.S  unseen-fruit.c  vis.sh
tc/bsv/: BoothMultiplier.bsv  BoothMultiplierCommon.bsv  BoothMultiplierMultiCycle.bsv  Common.bsv  RvAlu.bsv  RvCommon.bsv  RvCpu.bsv  RvDecoder.bsv  RvDecompressor.bsv  RvDecompressorCommon.bsv  RvDecompressorPriority.bsv  RvFpu.bsv  RvFpuTestManual.bsv  RvRegisters.bsv  generate-testfloat.sh
tc/solutions/: add5.S  add5.c  ai-showdown.S  ai-showdown.c  calibrating-laser-cannons-2.c  calibrating-laser-cannons-2.data  calibrating-laser-cannons.S  calibrating-laser-cannons.c  dancing-machine.S  dancing-machine.c  delicious-order.S  divide.S  masking-time.S  masking-time.c  maze.S  random-number-generator.S  random-number-generator.c  spacial-invasion.S  storage-cracker.S  storage-cracker.c  tower-of-alloy.S  xor.S  (+5 more)
(+36 files in other folders)
