[package]
name = "bww-multiplier-generator"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"
publish = false


[dependencies]
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }


[lints]
workspace = true
