[package]
name = "freestanding"
version = "0.1.0"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"


[dependencies]
riscv = { path = ".." }


[lints.rust]
rust_2018_idioms = "deny"
warnings = "deny"


[workspace]


[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }


[profile.dev]
panic = "abort"


[profile.release]
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
