[package]
name = "freestanding"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2024"
publish = false


[dependencies]
riscv = { path = ".." }


[lints.rust]
rust_2018_idioms = "deny"
warnings = "deny"


[workspace]


[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
let_and_return = "allow"
similar_names = "allow"


[profile.dev]
panic = "abort"


[profile.release]
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
